--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -167,14 +167,14 @@ $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
     position: absolute;
     width: 100%;
     left: 0;
-    bottom: -77px;
+    bottom: -80px;
     left: 13px;
     display: none;
     padding-top: 20px;
-    background: white;
+    background: #20242D;
     padding: 5px 10px;
     border-radius: 8px;
-    color: #20242D;
+    color: white;
     z-index: 200;
     .container {
       ul {
