refactor: update Create Pocket page and providers for new program
- Replace `SwapProgramProvider` with `PocketProgramProvider`
- Increase the height of the dropdown overlay and date picker
- Add `useEffect` hook for address selection
- Add `className` and `placeholder` props to the CurrencyInput component
- Add `symbol` field to the list of allowed currencies
- Add `currencyBadgeOnly` and `disableDropdown` props
- Add classname and badge classname props
- Add

[src/services/program.service.ts]
- Replace `SwapProgramProvider` with `PocketProgramProvider`
[src/components/select/dropdown-select.component.tsx]
- Increase the height of the dropdown overlay from `40px` to `63px`
- Add a w-full class to the input element
- Update the logic for selecting the value in the input element to also handle strings
[src/components/currency-input/currency-input.component.tsx]
- Add `useEffect` hook for address selection
- Add `className` and `placeholder` props to the component
- Add `symbol` field to the list of allowed currencies
- Add `currencyBadgeOnly` and `disableDropdown` props
- Change the initial address selected to an empty string if `currencyBadgeOnly` is true
- Add classname and badge classname props
- Add onAddressSelect and onAmountChange callbacks
-
[src/providers/program/swap-program.provider.ts]
- Rename `swap-program.provider.ts` to `pocket-program.provider.ts`
[src/components/header/index.tsx]
- Remove console log from the Header component
[src/components/icons/index.tsx]
- Add a DeleteIconCircle component
[src/components/datetime-picker/datetime-picker.component.tsx]
- Increase the height of the date picker from `56px` to `63px`
[src/components/create-pocket/each-batch.component.tsx]
- Add a component to set the amount of each batch in the create pocket page
- Add a CurrencyInput component to set the batch volume
- Add a validation that the batch volume is required
[styles/globals.css]
- Add a dark-input class to style placeholder text in input fields
- Change ba

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -176,6 +176,9 @@ input[type=number] {
   background-color: #20242D !important;
   color: white;
 }
+.dark-input input::placeholder  {
+  color: white;
+}
 
 .ant-picker-panel-container {
   background: #20242D !important;
