--- a/styles/globals.css
+++ b/styles/globals.css
@@ -120,7 +120,7 @@ input[type=number] {
 .hamster-modal > .ant-modal-content,
 .hamster-modal .ant-modal-header,
 .hamster-modal .ant-modal-footer {
-  background-color: #F8F9FE;
+  background-color: #20242D;
 }
 .hamster-modal > .ant-modal-content .ant-modal-close {
   top: 40px;
@@ -128,6 +128,7 @@ input[type=number] {
 }
 .hamster-modal .ant-modal-close-icon {
   font-size: 24px;
+  filter: invert(100%) sepia(0%) saturate(7489%) hue-rotate(186deg) brightness(95%) contrast(105%);
 }
 
 .css-ul1er5 {
