chore: Add new features to Pocket Program Provider
- Add a new endpoint for Solana mainnet
- Add logic for depositing assets to a pocket, closing a pocket and withdrawing assets
- Add two components: `deposit-modal.component` and `close-pocket-modal.component`
- Add a request to the Hamster server to get whitelist data
- Add selector for active pockets
- Add `closePocket` and `depositPocket` functions to `program.service`
- Add instructions

[src/providers/program/pocket-program.provider.ts]
- Add a new mainnet endpoint for Solana
- Log pocket ID and state when creating a pocket
- Add logic for depositing assets to a pocket
- Create token vaults if they don't exist
- Add logic for closing a pocket and withdrawing assets
[src/components/create-pocket/success-modal.component.tsx]
- Rename the file from `src/components/create-pocket/success-modal.component.tsx` to `src/components/success-modal.component.tsx`
- Add `message` and `okMessage` props to the component
- Replace the static message with `props.message`
- Replace the static button text with `props.okMessage`
[src/hooks/pages/create-pocket/create-pocket.page.tsx]
- Move the `SuccessTransactionModal` component from `create-pocket.component` to `success-modal.component`
- Remove `console.log` calls for `liqBase` and `baseAddress`
- Process stopConditions when creating the pocket
- Add `okMessage` and `message` props to the `SuccessTransactionModal` component
[src/components/home/index.ts]
- Add two components: `deposit-modal.component` and `close-poccket-modal.component`
[src/hooks/useWhitelist.tsx]
- Remove the `console.log` of the liquidities array
- Add a request to the Hamster server to get whitelist data
[src/components/my-pools/active-pool-group.component.tsx]
- Import `useCallback` from react
- Add selector for active pockets
- Add `PoolItem` component
- Use `useCallback` for fetching active pockets
- Add parameters to `getActivePockets` call
- Add debounce to search input
[src/services/program.service.ts]


--- a/styles/globals.css
+++ b/styles/globals.css
@@ -180,6 +180,13 @@ input[type=number] {
 .dark-input input::placeholder  {
   color: white;
 }
+.gray-input input {
+  background-color: #353C4B !important;
+  color: white;
+}
+.gray-input input::placeholder  {
+  color: white;
+}
 
 .ant-picker-panel-container {
   background: #20242D !important;
