chore: Improve pocket creation UX
- Update placeholder text in Pool Information component
- Change the placeholder text from "Search by Pool name, ID, Token" to "Enter pocket name"

[src/components/create-pocket/pool-informationn.component.tsx]
- Change the placeholder text from "Search by Pool name, ID, Token" to "Enter pocket name"

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -187,7 +187,9 @@ input[type=number] {
 .gray-input input::placeholder  {
   color: white;
 }
-
+.dark-input, .gray-input, .dark-input input, .gray-input input {
+  cursor: pointer !important;
+}
 .ant-picker-panel-container {
   background: #20242D !important;
 }
