reduce text color in placeholder (#12)

--- a/src/components/currency-input/currency-input.module.scss
+++ b/src/components/currency-input/currency-input.module.scss
@@ -1,11 +1,10 @@
 
 .myInput {
-    .ant-input {
-        background-color: red;
+    :global {
+        input::placeholder {
+            color: #7886A0 !important;
+        }
     }
-}
-.ant-input {
-    background-color: red;
 }
 .ant-select-selection-placeholder {
     color: black;
