chore: Improve pocket creation UX & logic
- Remove unused imports, update `useEffect` hook, and add asterisk to end time label in end-time-condition component
- Remove all focus outlines and borders in globals.css
- Add onClick callback and allow tokens to be specified as an array of strings to currency-input component
- Remove `primary` state variable from base-spent-condition component
- Add Select Token Modal component, inject allowed tokens, filter tokens with search, and add Rayd

[src/components/create-pocket/stop-condition/end-time-condition.component.tsx]
- Remove the `motion` and `AnimatePresence` imports
- Update the `useEffect` hook to use the `primary` variable
- Remove the animation logic from the component
- Add a required asterisk to the end time label
[styles/globals.css]
- Remove all focus outlines and borders
[src/components/currency-input/currency-input.component.tsx]
- Add onClick callback to currency-input component
- Allow tokens to be specified as an array of strings
[src/components/create-pocket/stop-condition/base-spent-condition.component.tsx]
- Remove the `primary` state variable and associated code
[src/components/create-pocket/select-token-modal.component.tsx]
- Add Select Token Modal component
- Inject allowed tokens from hook to render
- Inject whitelist info
- Filter tokens with search
- Add Raydium swap link to each token
[src/components/create-pocket/stop-condition/batch-amount-condition.tsx]
- Remove unused `motion` and `AnimatePresence` imports
- Update the tooltip message
- Change the `currentValue` calculation logic
- Update the class name of the main container
[src/components/create-pocket/dca-ppair.component.tsx]
- Add modal to select target token
- Update token prices from Coingecko
- Disable dropdown and input of target token
- Add handleOk function to target token modal

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -231,3 +231,12 @@ table tr {
 table tr th {
   text-align: left;
 }
+
+
+*:focus {
+  outline: none;
+  border: none;
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
