--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -166,12 +166,13 @@ $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
   .toggle-container {
     position: absolute;
     width: 100%;
-    bottom: -80px;
+    bottom: -160px;
     left: 13px;
     display: none;
     padding-top: 20px;
     background: #20242D;
-    padding: 5px 10px;
+    padding: 10px 10px;
+    padding-left: 20px;
     border-radius: 8px;
     color: white;
     z-index: 200;
