chore: Adjust font sizes and layout for My Pools pages
- Update font sizes and styling for various components
- Add new footer item
- Change layout for mobile devices
- Add pool control buttons
- Add search bar and filter select to sort pools
- Update animation data for header component

[src/components/my-pools/pocket-balance.component.tsx]
- Change font size of total SOL to 16px and add a 20px size for medium screens
- Change font size of total USD to 14px and add a 16px size for medium screens
- Change font size of Est Pocket Balance to 16px for medium screens
[src/components/select/filter-select.component.tsx]
- Lower font size in option label from `14px` to `12px`
- Adjust padding for the dropdown from `10px` to `3px` on mobile and `10px` on desktop
- Fix typo in the classname of the dropdown element
[src/components/footer/index.tsx]
- Change the footer menu layout for mobile devices
- Add a new footer item
- Change the link of the HamsterboxIcon to the home page
- Update font size of footer items
[src/components/my-pools/pool-item/pool-item-end-condition.component.tsx]
- Change font size of "End Conditions" header from 16px to 14px
- Change font size of condition text from 16px to 12px
- Add "N/A" text for condition when there is no condition
[src/components/header/index.tsx]
- Change the classname of the `StyledHeader` component to include `px-[12px] md:px-0`
- Increase the width of the `HamsterboxIcon` component from `100px` to `140px`
[src/components/header/user-profile.tsx]
- Increase font size of walletPublicKey from 7px to 12px
[src/components/layout-section/index.tsx]
- Change the padding of the layout section from `pt-16` to `pt-16 px-12 md:px-0`
[src/components/my-pools/pool-item/pocket-note.tsx]
- Change font size of the 'NOTE' label from `16px` to `14px` on mobile devices
[src/components/my-pools/active-pool-group.component.tsx]
- Change the layout of the header
- Add a refresh button
- Add a link to the "Ended Pockets" page
- Add a search bar
- Add

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -240,3 +240,30 @@ input:focus {
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
+
+@media screen and (max-width: 768px) {
+  .pool-control-btn {
+    font-size: 14px !important;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+    height: 36px;
+    max-width: 110px;
+  }
+
+  .app-input .container {
+    max-width: 100% !important;
+  }
+
+  .app-input .container input {
+    font-size: 12px !important;
+    height: 36px !important;
+  }
+
+  .app-input .container .left-icon {
+    top: 47% !important;  
+  }
+  .app-input .container .left-icon svg {
+    width: 14px !important;
+    height: 14px !important;
+  }
+}
