--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -180,6 +180,9 @@ $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
       ul {
         li {
           padding: 5px 0;
+          @media screen and (max-width: 768px) {
+            font-size: 14px;
+          }
         }
       }
     }
