--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,6 +117,11 @@ input[type=number] {
   padding: 40px 49px 20px;
   border-radius: 40px;
 }
+@media screen and (max-width: 768px) {
+  .hamster-modal > .ant-modal-content {
+    padding: 10px 15px;
+  }
+}
 .hamster-modal > .ant-modal-content,
 .hamster-modal .ant-modal-header,
 .hamster-modal .ant-modal-footer {
@@ -257,6 +262,10 @@ input:focus {
   .app-input .container input {
     font-size: 12px !important;
     height: 36px !important;
+  }
+  .app-input.buy-condition .container input {
+    font-size: 12px !important;
+    height: 43px !important;
   }
 
   .app-input .container .left-icon {
