chore: Improve UX for My Pockets and Portfolio sections
- Adjust the styling of the header and select components on screens with a width of 768px or less
- Add icons to the user profile dropdown menu
- Add a "Create Pocket" option to the user profile dropdown menu
- Add a search bar for searching by pocket name, ID, or token
- Add a filter for sorting the ended pockets
- Add a dropdown for filtering by pocket type
- Add a Withdraw button for closed and not ended pockets
- Raise

[styles/globals.css]
- Add media query to adjust the picker panels and dropdown width when the screen size is less than 768px.
[src/components/select/dropdown-select.component.tsx]
- Change the height of the dropdown component from `!h-[63px]` to `h-[63px]`
- Adjust the height for mobile devices from `!h-[44px]` to `mobile:!h-[44px]`
[src/components/icons/index.tsx]
- Add a BookIcon component
- Add a NoneIcon component
- Add a DeleteIcon component
[src/components/header/index.module.scss]
- Add a box-shadow to the header
- Change the styling of the header on screens with a width of 768px or less
[src/components/portfolio/controller.component.tsx]
- Change the layout for the `FilterSelect` component on mobile devices
- Add a label for the `FilterSelect` component on mobile devices
- Adjust the size and padding of the `FilterSelect` component
[src/components/my-pools/ended-pool-group.component.tsx]
- Change the layout of the header to better fit mobile screens
- Change the font size of the header title
- Add a search bar for searching by pocket name, ID, or token
- Add a filter for sorting the ended pockets
- Add a dropdown for filtering by pocket type
[src/components/header/index.tsx]
- Add a OpenAI API for completions
- Add 2 tests for the inclusive string split function
- Fix a typo in the github action name
- Lower numeric tolerance for test files
- Move the `octokit` initialization to a separate file
- Raise the amount of returned recordings from `10` to `100`
- Remove unnecessary imports

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -276,3 +276,13 @@ input:focus {
     height: 14px !important;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .ant-picker-panels {
+    display: block !important;
+    text-align: center;
+  }
+  .ant-picker-dropdown {
+    width: calc(100vw - 30px) !important;
+  }
+}
