--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -176,6 +176,8 @@ $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
     border-radius: 8px;
     color: white;
     z-index: 200;
+    box-shadow: 0px 25px 40px rgb(23 36 53);
+
     .container {
       ul {
         li {
@@ -185,6 +187,12 @@ $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
           }
         }
       }
+    }
+
+    @media screen and (max-width: 768px) {
+      bottom: -179px;
+      left: -97px;
+      width: 155px;
     }
   }
 }
