chore: Update styling and text for PoolItem component
- Update text color, font size, text alignment, and text in multiple places in the Pool Item Component
- Remove width override for Ant Picker Dropdown class
- Add `flow-root` class to the div in the Controller Component

[src/components/my-pools/pool-item/pool-item.component.tsx]
- Change text color from white to dark40 in multiple places
- Change font size from 12px to 14px in multiple places
- Change font size from 14px to 16px in multiple places
- Change text alignment from left to right in multiple places
- Change the text “Batch bought” to show the amount of batches bought
- Change the text “Token bought” to show the amount of tokens bought
- Change the text “Spent”
[styles/globals.css]
- Remove the width override for the ant-picker-dropdown class
[src/components/history/controller.component.tsx]
- Change the className of the div from `!h-[48px] mobile:!h-[40px] md:ml-6 mobile:mt-[16px] mobile:hidden` to `!h-[48px] mobile:!h-[40px] md:ml-6 mobile:mt-[16px] mobile:hidden flow-root`

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -283,6 +283,6 @@ input:focus {
     text-align: center;
   }
   .ant-picker-dropdown {
-    width: calc(100vw - 30px) !important;
+    /* width: calc(100vw - 30px) !important; */
   }
 }
