--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,13 @@ body {
   box-sizing: border-box
 }
 
+@media screen and (max-width: 768px) {
+  body {
+    background-image: none; 
+    background-color: #060710;
+  }
+}
+
 
 a {
   color: inherit;
