--- a/styles/globals.css
+++ b/styles/globals.css
@@ -293,3 +293,7 @@ input:focus {
     /* width: calc(100vw - 30px) !important; */
   }
 }
+
+.ReactCollapse--collapse {
+  transition: height 500ms !important;
+}
