--- a/styles/globals.css
+++ b/styles/globals.css
@@ -297,3 +297,10 @@ input:focus {
 .ReactCollapse--collapse {
   transition: height 500ms !important;
 }
+
+.pocket-top-item {
+  background-image: url(../public/assets/images/pocket-bg.png);
+  min-height: 150px;
+  background-position: center;
+  border-radius: 10px;
+}
