--- a/styles/globals.css
+++ b/styles/globals.css
@@ -278,6 +278,9 @@ input:focus {
   .app-input .container .left-icon {
     top: 47% !important;  
   }
+  .app-input.psi .container .left-icon {
+    top: 60% !important;  
+  }
   .app-input .container .left-icon svg {
     width: 14px !important;
     height: 14px !important;
@@ -308,4 +311,65 @@ input:focus {
 .pocket-bg {
   background-image: url(../public/assets/images/pocket-bg.png);
   background-position: center;
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 28px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 7px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #735CF7;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #735CF7;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(28px);
+  -ms-transform: translateX(28px);
+  transform: translateX(28px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
