--- a/styles/globals.css
+++ b/styles/globals.css
@@ -132,7 +132,7 @@ input[type=number] {
 .hamster-modal > .ant-modal-content,
 .hamster-modal .ant-modal-header,
 .hamster-modal .ant-modal-footer {
-  background-color: #20242D;
+  background-color: #121320;
 }
 .hamster-modal > .ant-modal-content .ant-modal-close {
   top: 40px;
