--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -139,7 +139,7 @@ $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
 
             a:hover {
               p {
-                color: #B998FB;
+                color: #735CF7;
               }
             }
           }
@@ -157,7 +157,7 @@ $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
 
 [data-theme="dark"] {
   .desktop-menu-text:hover {
-    color: #B998FB;
+    color: #735CF7;
   }
 }
 
